refactor: optimizar arquitectura, control de excepciones y scripts de despliegue
* Clases: Reorganización y eliminación de clases obsoletas o innecesarias.
* Arquitectura: Corrección de la lógica de negocio, moviendo el mapeo de datos fuera de las capas de servicio.
* Funcionalidad: Adaptación del sistema para recibir el RUT en cualquier formato y procesarlo de forma estandarizada.
* Excepciones: Mejora en el control de respuestas y enriquecimiento del registro de eventos en los logs locales de cada microservicio.
* Pruebas: Creación de archivos de extensión .http para pruebas de endpoints mediante REST Client.
* Base de datos: Corrección de inconsistencias técnicas en los scripts SQL de inicialización.
* Despliegue: Creación de un script de automatización .sh para entornos basados en Linux.
* Documentación: Actualización y aclaración de secciones clave dentro del archivo README.md.